--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,19 @@ body{
     font-weight: bold;
     font-size: 30px;
 }
+.card{
+    width: 80%;
+    margin-top: 40px;
+    margin-left: 90px;
+    box-shadow: 20px;
+}
+.card-body{
+    margin-left: 30px;
+}
+#btn{
+    margin-top: 100px;
+    margin-left: 80px;
+    border: 2px black;
+    border: 60%;
+    color: black;
+}
