--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,22 @@ body{
     margin-left: 30px;
 }
 #btn{
-    margin-top: 100px;
+    margin-top: 60px;
     margin-left: 80px;
     border: 2px black;
-    border: 60%;
+    border-radius: 20px;
     color: black;
+    height: 10vh;
+    width: 60vh;
+    background-color: goldenrod;
+    font-weight: bold;
+}
+#hr-line{
+    margin-top: 30px;
+    border: 30px;
+    height: 12px;
+    color:black;
+    /* margin-bottom: 50px; */
+    width: 100%;
+    
 }
