--- a/css/style.css
+++ b/css/style.css
@@ -42,5 +42,7 @@ body{
     color:black;
     /* margin-bottom: 50px; */
     width: 100%;
-    
+}
+.card-title{
+    background: linear-gradient(to right,yellow,green );
 }
