st: Modified the akanname to sofia font

--- a/css/style2.css
+++ b/css/style2.css
@@ -4,3 +4,14 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
+#logo{
+    height: 15vh;
+    width: 20vh;
+
+}
+#akan h4{
+    /* text-align: end; */
+    font-family: 'Sofia', cursive;
+    font-weight: bold;
+    font-size: 30px;
+}
