--- a/css/style2.css
+++ b/css/style2.css
@@ -26,7 +26,7 @@ body{
 #validate{
     padding-top: 30px;
     background-color: goldenrod;
-    height: 300px;
+    height: 380px;
     margin-top: 3%;
 
 }
@@ -60,4 +60,15 @@ body{
     width: 100%;
     border: 30px;
     height: 10px;
+}
+#btn{
+    margin-top: 2%;
+    margin-left: 50px;
+    border: 2px black;
+    border-radius: 20px;
+    color: black;
+    height: 6vh;
+    width: 30vh;
+    font-weight: bolder;
+    background-color: red;
 }
