Modified the image link

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/images/sunset-ga564b39a6_1920.jpg);
+    background-image: url(sunset-ga564b39a6_1920.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
