fx: Added background images

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/images/sunset-ga564b39a6_1920.jpg);
+    background: url("https://user-images.githubusercontent.com/55548691/157048935-35fb738d-e3d7-4aed-a502-00b3ae0c5302.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
