--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/images/ghana-gaf7dd2765_1920.jpg);
+    background-image: url("https://user-images.githubusercontent.com/55548691/157049284-ba62dba1-ab08-4f84-85f3-48b7cb70de15.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
